--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,7 @@ import { Card, CardDescription, CardHeader, CardTitle } from "@/components/ui/ca
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="404 - Hansumfella merch" showFooter={false} showNavbar={false}>
+<Layout title="404 - Wendilunar" showFooter={false} showNavbar={false}>
     <div class="flex h-screen flex-col items-center justify-center px-4 sm:px-8">
         <div class="flex h-full w-full flex-1 flex-col items-center justify-center gap-4">
             <Card className="bg-zinc-800/20">
