--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,11 +2,15 @@
     <div
         class="flex flex-col items-center justify-center gap-4 sm:flex-row sm:items-start sm:justify-between"
     >
-        <p class="text-center text-sm font-light text-foreground/40">
-            &copy; {new Date().getFullYear()} Hansumfella LLC.
+        <p class="text-center text-sm font-light text-foreground/80">
+            &copy; {new Date().getFullYear()} Wendi & Co.
         </p>
-        <p class="text-center text-sm font-light text-foreground/40">
-            Made with <img src="/emotes/fella-slay.webp" alt="heart" class="inline-block size-6" /> by
+        <p class="text-center text-sm font-light text-foreground/80">
+            Made with <img
+                src="/emotes/wendi-pog.webp"
+                alt="heart"
+                class="inline-block size-6 rounded-[4px]"
+            /> by
             {" "}
             <a href="https://kyle.so" class="text-primary">dickey</a>
         </p>
