--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,13 +6,8 @@
             &copy; {new Date().getFullYear()} Wendi & Co.
         </p>
         <p class="text-center text-sm font-light text-foreground/80">
-            Made with <img
-                src="/emotes/wendi-pog.webp"
-                alt="heart"
-                class="inline-block size-6 rounded-[4px]"
-            /> by
-            {" "}
-            <a href="https://kyle.so" class="text-primary">dickey</a>
+            Made with ❤️ by
+            <a href="https://kyle.so" class="text-primary hover:underline">dickey</a>
         </p>
     </div>
 </footer>
