--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -15,7 +15,7 @@ const { size } = Astro.props as Props;
 
 <div class="flex flex-wrap items-center gap-8">
     <a
-        href="https://www.twitch.tv/hansumfella"
+        href="https://www.twitch.tv/wendilunar"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/40 transition-all ease-in-out hover:fill-primary"
@@ -24,7 +24,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://www.youtube.com/@hansumfella"
+        href="https://www.youtube.com/channel/UC940RlCMYopE4Nb3CGnLaxw"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/40 transition-all ease-in-out hover:fill-primary"
@@ -33,7 +33,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://www.tiktok.com/@hansumfellaclips"
+        href="https://www.tiktok.com/@wendilunarlive"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/40 transition-all ease-in-out hover:fill-primary"
@@ -42,7 +42,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://www.instagram.com/hansumfella"
+        href="https://www.instagram.com/wendilunar/"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/40 transition-all ease-in-out hover:fill-primary"
@@ -51,7 +51,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://discord.gg/hansumfella"
+        href="https://discord.gg/Fw3gkTXW"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/40 transition-all ease-in-out hover:fill-primary"
@@ -60,7 +60,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://www.twitter.com/hansumfellalive"
+        href="https://twitter.com/LoonieBoBoonie"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/40 transition-all ease-in-out hover:fill-primary"
