--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -13,7 +13,7 @@ interface Props {
 const { size } = Astro.props as Props;
 ---
 
-<div class="flex flex-wrap items-center gap-8">
+<div class="flex flex-wrap items-center gap-4 md:gap-8">
     <a
         href="https://www.twitch.tv/wendilunar"
         target="_blank"
