--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,13 +9,13 @@ import SocialIcons from "./SocialIcons.astro";
     <div class="flex w-full flex-col items-start gap-4 lg:w-1/2">
         <div class="flex flex-col gap-2">
             <h1
-                class="text-center font-serif text-5xl text-primary md:text-8xl lg:text-8xl 2xl:text-9xl"
+                class="text-center font-serif text-5xl text-accent md:text-8xl lg:text-8xl 2xl:text-9xl"
             >
                 Wendilunar
             </h1>
         </div>
 
-        <p class="mb-8 text-lg font-normal text-foreground/40">Queen Yap of Yapperland</p>
+        <p class="mb-8 text-lg font-bold text-foreground/60">Queen of Yapperland</p>
 
         <SocialIcons size="size-8 md:size-10" />
     </div>
