--- a/src/components/AllProducts.astro
+++ b/src/components/AllProducts.astro
@@ -11,8 +11,8 @@ const { products } = Astro.props as Props;
 ---
 
 <div class="flex flex-col gap-4 px-2 pb-8 md:px-16" id="shop">
-    <h2 class="text-3xl font-bold">Hansumfella Merch</h2>
-    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
+    <h2 class="text-3xl font-extrabold">All Products</h2>
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
         {products.map((product: any) => <ProductCard product={product} />)}
     </div>
 </div>
