--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,12 +2,12 @@
     <div
         class="flex flex-col items-center justify-center gap-4 sm:flex-row sm:items-start sm:justify-between"
     >
-        <p class="text-center text-sm font-light text-foreground/80">
+        <p class="text-center text-sm font-normal text-foreground/80">
             &copy; {new Date().getFullYear()} Wendi & Co.
         </p>
-        <p class="text-center text-sm font-light text-foreground/80">
+        <p class="text-center text-sm font-normal text-foreground/80">
             Made with ❤️ by
-            <a href="https://kyle.so" class="text-primary hover:underline">dickey</a>
+            <a href="https://kyle.so" class="text-accent hover:underline">dickey</a>
         </p>
     </div>
 </footer>
