--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,18 +1,25 @@
 ---
-import { Card, CardDescription, CardHeader, CardTitle } from "@/components/ui/card";
+import { Button } from "@/components/ui/button";
+import { Card, CardDescription, CardFooter, CardHeader, CardTitle } from "@/components/ui/card";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="404 - Wendilunar" showFooter={false} showNavbar={false}>
     <div class="flex h-screen flex-col items-center justify-center px-4 sm:px-8">
         <div class="flex h-full w-full flex-1 flex-col items-center justify-center gap-4">
-            <Card className="bg-zinc-800/20">
+            <Card className="bg-card/60">
                 <CardHeader>
                     <CardTitle>Page not found</CardTitle>
                     <CardDescription
                         >Sorry, we couldn't find the page you're looking for.</CardDescription
                     >
                 </CardHeader>
+
+                <CardFooter>
+                    <a href="/" class="w-full">
+                        <Button className="w-full">Go back home</Button>
+                    </a>
+                </CardFooter>
             </Card>
         </div>
     </div>
