--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,24 +5,16 @@ import AllProducts from "@/components/AllProducts.astro";
 import { getAllProducts } from "@/lib/shopify";
 import { setCache } from "@/lib/cache";
 
-// const headers = Astro.request.headers;
-// const ip = headers.get("x-vercel-forwarded-for") || Astro.clientAddress;
-// const products = await getAllProducts({ limit: 100, buyerIP: ip });
+const headers = Astro.request.headers;
+const ip = headers.get("x-vercel-forwarded-for") || Astro.clientAddress;
+const products = await getAllProducts({ limit: 100, buyerIP: ip });
 
-// setCache.short(Astro);
+setCache.short(Astro);
 ---
 
 <Layout title="Wendilunar" showNavbar={false} showFooter={false}>
     <div class="flex min-h-screen flex-col items-center justify-center px-4 sm:px-8">
         <Hero />
-        <!-- <h1 class="my-2 text-center font-serif text-7xl">Wendilunar</h1>
-        <h1 class="my-2 text-center font-[Gluten] text-7xl font-extrabold">Wendilunar</h1>
-        <h1 class="my-2 text-center font-[Sniglet] text-7xl">Wendilunar</h1> -->
-
-        <!--<AllProducts products={products} /> -->
-        <!-- <div class="flex flex-col items-center justify-center gap-2">
-            <img src="/emotes/wendi-pog.webp" alt="Wendilunar" class="size-16 rounded-md" />
-            <p class="text-center text-sm text-foreground/40">coming soon</p>
-        </div> -->
+        <!-- <AllProducts products={products} /> -->
     </div>
 </Layout>
