--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,8 +10,7 @@ import Layout from "@/layouts/Layout.astro";
             <Card className="bg-card/60">
                 <CardHeader>
                     <CardTitle>Page not found</CardTitle>
-                    <CardDescription
-                        >Sorry, we couldn't find the page you're looking for.</CardDescription
+                    <CardDescription>Sorry, we couldn't find the page you're looking for.</CardDescription
                     >
                 </CardHeader>
 
