ok fr launch ready

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,16 +3,10 @@ import TwitchEmbed from "./TwitchEmbed";
 import SocialIcons from "./SocialIcons.astro";
 ---
 
-<div
-    class="flex min-h-screen w-full flex-1 flex-row items-center justify-between gap-0 px-2 md:px-16"
->
+<div class="flex min-h-screen w-full flex-1 flex-row items-center justify-between gap-0 px-2 md:px-16">
     <div class="flex w-full flex-col items-start gap-4 lg:w-1/2">
         <div class="flex flex-col gap-2">
-            <h1
-                class="text-center font-serif text-5xl text-accent md:text-8xl lg:text-8xl 2xl:text-9xl"
-            >
-                Wendilunar
-            </h1>
+            <h1 class="text-center font-serif text-5xl text-accent md:text-8xl lg:text-8xl 2xl:text-9xl">WendiLunar</h1>
         </div>
 
         <p class="mb-8 text-lg font-bold text-foreground/60">Queen of Yapperland</p>
