--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -24,7 +24,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://www.youtube.com/channel/UC940RlCMYopE4Nb3CGnLaxw"
+        href="https://www.youtube.com/@Wendilunar"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/60 transition-all ease-in-out hover:fill-primary"
@@ -51,7 +51,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://discord.gg/Fw3gkTXW"
+        href="https://discord.gg/wendi"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/60 transition-all ease-in-out hover:fill-primary"
