--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description, ogImage, showFooter = true, showNavbar = true } = As
 
         <!-- start meta -->
         <meta charset="UTF-8" />
-        <meta name="description" content={description ? description : "Wendilunar Merch"} />
+        <meta name="description" content={description ? description : "WendiLunar Merch"} />
         <meta name="viewport" content="width=device-width" />
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <meta name="generator" content={Astro.generator} />
@@ -57,7 +57,7 @@ const { title, description, ogImage, showFooter = true, showNavbar = true } = As
         <!-- start open graph -->
         <meta property="og:type" content="website" />
         <meta property="og:title" content={title} />
-        <meta property="og:description" content={description || "Wendilunar merch coming soon"} />
+        <meta property="og:description" content={description || "WendiLunar merch coming soon"} />
         <meta property="og:image" content={ogImage || "/og-image.png"} />
         <meta property="og:url" content={Astro.url} />
         <!-- end open graph -->
@@ -67,7 +67,7 @@ const { title, description, ogImage, showFooter = true, showNavbar = true } = As
         <meta name="twitter:site" content="@LoonieBoBoonie" />
         <meta name="twitter:creator" content="@LoonieBoBoonie" />
         <meta name="twitter:title" content={title} />
-        <meta name="twitter:description" content={description || "Wendilunar merch coming soon"} />
+        <meta name="twitter:description" content={description || "WendiLunar merch coming soon"} />
         <meta name="twitter:image" content={ogImage || "/og-image.png"} />
         <!-- end twitter -->
 
