--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Hero from "@/components/Hero.astro";
 // setCache.short(Astro);
 ---
 
-<Layout title="Wendilunar" showNavbar={false} showFooter={false}>
+<Layout title="WendiLunar" showNavbar={false} showFooter={false}>
     <div class="flex min-h-screen flex-col items-center justify-center px-4 sm:px-8">
         <Hero />
         <!-- <AllProducts products={products} /> -->
