--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,30 @@
-<footer class="w-full px-8 py-2">
+<footer class="w-full px-8 py-4">
     <div
         class="flex flex-col items-center justify-center gap-4 sm:flex-row sm:items-start sm:justify-between"
     >
-        <p class="text-center text-sm font-normal text-foreground/80">
-            &copy; {new Date().getFullYear()} Wendi & Co.
-        </p>
+        <div class="flex flex-row items-center justify-between gap-2 md:justify-start">
+            <p class="text-sm font-normal text-foreground/80">
+                &copy; {new Date().getFullYear()} Wendi Inc.
+            </p>
+
+            <ul
+                class="ml-2 flex list-none flex-row flex-wrap items-start justify-center gap-3 text-center md:items-center md:text-left"
+            >
+                <li class="text-xs font-normal text-foreground/80">
+                    <a href="/terms" class="hover:underline" target="_blank">Terms of Service</a>
+                </li>
+                <li class="text-xs font-normal text-foreground/80">
+                    <a href="/privacy" class="hover:underline" target="_blank">Privacy Policy</a>
+                </li>
+                <li class="text-xs font-normal text-foreground/80">
+                    <a href="/contact" class="hover:underline" target="_blank">Contact Us</a>
+                </li>
+                <li class="text-xs font-normal text-foreground/80">
+                    <a href="/returns" class="hover:underline" target="_blank">Returns Policy</a>
+                </li>
+            </ul>
+        </div>
+
         <p class="text-center text-sm font-normal text-foreground/80">
             Made with ❤️ by
             <a href="https://kyle.so" class="text-accent hover:underline">dickey</a>
