--- a/src/pages/product/[...handle].astro
+++ b/src/pages/product/[...handle].astro
@@ -19,11 +19,7 @@ if (!product) {
 }
 ---
 
-<Layout
-    title={product?.title || "Hansumfella merch"}
-    description={product?.description}
-    ogImage={product?.featuredImage?.url}
->
+<Layout title={product?.title || "Hansumfella merch"} description={product?.description} ogImage={product?.featuredImage?.url}>
     <div class="flex flex-col items-center justify-center px-4 sm:px-8">
         <div class="flex w-full flex-1 flex-col items-start gap-4 md:w-[85%]">
             <div class="mt-16 grid w-full grid-cols-1 gap-8 pb-8 sm:pb-0 md:grid-cols-2">
