--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,7 +72,8 @@ const { title, description, ogImage, showFooter = true, showNavbar = true } = As
         <!-- end twitter -->
 
         <title>{title}</title>
-    </head><body class="m-0 flex min-h-screen flex-col p-0">
+    </head>
+    <body class="m-0 flex min-h-screen flex-col p-0">
         {showNavbar && <Navbar />}
         <main class="flex-grow">
             <slot />
