--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,11 @@
 
         <p class="text-center text-sm font-normal text-foreground/80">
             Made with ❤️ by
-            <a href="https://kyle.so" class="text-accent hover:underline">dickey</a>
+            <a
+                href="https://kyle.so?ref=wendilunar"
+                target="_blank"
+                class="text-accent hover:underline">dickey</a
+            >
         </p>
     </div>
 </footer>
