--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,20 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "@/components/Hero.astro";
-// import AllProducts from "@/components/AllProducts.astro";
-// import { getAllProducts } from "@/lib/shopify";
-// import { setCache } from "@/lib/cache";
+import AllProducts from "@/components/AllProducts.astro";
+import { getAllProducts } from "@/lib/shopify";
+import { setCache } from "@/lib/cache";
 
-// const headers = Astro.request.headers;
-// const ip = headers.get("x-vercel-forwarded-for") || Astro.clientAddress;
-// const products = await getAllProducts({ limit: 100, buyerIP: ip });
+const headers = Astro.request.headers;
+const ip = headers.get("x-vercel-forwarded-for") || Astro.clientAddress;
+const products = await getAllProducts({ limit: 100, buyerIP: ip });
 
-// setCache.short(Astro);
+setCache.short(Astro);
 ---
 
-<Layout title="WendiLunar" showNavbar={false} showFooter={false}>
+<Layout title="WendiLunar" showNavbar={true} showFooter={true}>
     <div class="flex min-h-screen flex-col items-center justify-center px-4 sm:px-8">
         <Hero />
-        <!-- <AllProducts products={products} /> -->
+        <AllProducts products={products} />
     </div>
 </Layout>
