--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -51,7 +51,7 @@ const { size } = Astro.props as Props;
     </a>
 
     <a
-        href="https://discord.gg/wendi"
+        href="https://discord.gg/KKGQNMSTPU"
         target="_blank"
         rel="noopener noreferrer"
         class="fill-foreground/60 transition-all ease-in-out hover:fill-primary"
