fix metadata for product page

--- a/src/pages/product/[...handle].astro
+++ b/src/pages/product/[...handle].astro
@@ -21,7 +21,7 @@ if (!product) {
 ---
 
 <Layout
-    title={product?.title || "Hansumfella merch"}
+    title={product?.title || "WendiLunar merch"}
     description={product?.description}
     ogImage={product?.featuredImage?.url}
 >
