change analytics url

--- a/src/layouts/PolicyLayout.astro
+++ b/src/layouts/PolicyLayout.astro
@@ -14,7 +14,7 @@ const { frontmatter } = Astro.props as Props;
 <html lang="en">
     <head>
         <!-- start analytics -->
-        <script defer data-domain="wendilunar.com" src="https://analytics.kyle.so/js/script.js"
+        <script defer data-domain="wendilunar.com" src="https://a.kyle.so/js/script.js"
         ></script>
         <!-- end analytics -->
 
