add product selector & fix images height

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "@/components/Hero.astro";
-import AllProducts from "@/components/AllProducts.astro";
+import AllProducts from "@/components/AllProducts.tsx";
 import { getAllProducts } from "@/lib/shopify";
 import { setCache } from "@/lib/cache";
 
 const headers = Astro.request.headers;
 const ip = headers.get("x-vercel-forwarded-for") || Astro.clientAddress;
-const products = await getAllProducts({ limit: 100, buyerIP: ip });
+const data = await getAllProducts({ limit: 100, buyerIP: ip });
 
 setCache.short(Astro);
 ---
@@ -15,6 +15,6 @@ setCache.short(Astro);
 <Layout title="WendiLunar" showNavbar={true} showFooter={true}>
     <div class="flex min-h-screen flex-col items-center justify-center px-4 sm:px-8">
         <Hero />
-        <AllProducts products={products} />
+        <AllProducts products={data.products} collections={data.collections} client:load />
     </div>
 </Layout>
